# 2023AGC_project

./: .gitignore  CMakeLists.txt  README.md
gui/: main.cpp
lib/: CMakeLists.txt  camera_object.h  material.cpp  material.h  newclass.cpp  newclass.h  point_light.cpp  point_light.h  raytracing_lib.h  scene.cpp  scene.h  scene_settings.h  scene_viewer.cpp  scene_viewer.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
lib/data/: data.h
lib/shaders/: camera_object.glsl  hit_record.glsl  material.glsl  new_class.glsl  point_light.glsl  raytracing_shader.frag  sphere.glsl  triangle.glsl
test/: main.cpp
